# EchoSonar

./: .gitignore  COMMANDS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/echosonar/: cli.py  config.py  engine.py
