[project]
name = "echosonar"
version = "1.0.0"
description = "Telegram Monitoring User Bot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "telethon>=1.43.2",
    "typer",
    "confuse",
    "pyyaml",
]

[project.scripts]
echosonar = "echosonar.cli:app"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
